--- a/Delningsekonomi/Delningsekonomi/Delningsekonomi.csproj
+++ b/Delningsekonomi/Delningsekonomi/Delningsekonomi.csproj
@@ -194,6 +194,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Topmenu.cshtml" />
     <Content Include="Views\Shared\Bottommenu.cshtml" />
+    <Content Include="Views\Shared\MapLayout.cshtml" />
+    <Content Include="Views\Shared\View.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
