--- a/Delningsekonomi/Delningsekonomi/Delningsekonomi.csproj
+++ b/Delningsekonomi/Delningsekonomi/Delningsekonomi.csproj
@@ -196,6 +196,7 @@
     <Content Include="Views\Shared\Bottommenu.cshtml" />
     <Content Include="Views\Shared\MapLayout.cshtml" />
     <Content Include="Views\Shared\View.cshtml" />
+    <Content Include="Views\Home\ListView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
