--- a/Delningsekonomi/Delningsekonomi/Delningsekonomi.csproj
+++ b/Delningsekonomi/Delningsekonomi/Delningsekonomi.csproj
@@ -161,7 +161,11 @@
     <Content Include="Images\avatar.png" />
     <Content Include="Images\CarServiceOffered.png" />
     <Content Include="Images\CarServiceWanted.png" />
+    <Content Include="Images\filterikon.png" />
     <Content Include="Images\FoodPurchaseOffered.png" />
+    <Content Include="Images\kartaikon.png" />
+    <Content Include="Images\listikon.png" />
+    <Content Include="Images\tidsikon.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -200,6 +204,7 @@
     <Content Include="Views\Shared\View.cshtml" />
     <Content Include="Views\Home\ListView.cshtml" />
     <Content Include="Views\Shared\ListLayout.cshtml" />
+    <Content Include="Views\Shared\Bottommenulist.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
