--- a/Delningsekonomi/Delningsekonomi/Delningsekonomi.csproj
+++ b/Delningsekonomi/Delningsekonomi/Delningsekonomi.csproj
@@ -62,8 +62,12 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Web.Abstractions" />
-    <Reference Include="System.Web.Routing" />
+    <Reference Include="System.Web.Abstractions">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Routing">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
@@ -160,20 +164,58 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Images\avatar.png" />
+    <Content Include="Images\Bar_Cat-01.png" />
+    <Content Include="Images\Cafe_Cat-01.png" />
     <Content Include="Images\CarServiceOffered.png" />
     <Content Include="Images\CarServiceWanted.png" />
+    <Content Include="Images\FastFood_Cat-01.png" />
+    <Content Include="Images\Filter_Icon.png" />
+    <Content Include="Images\Flowers_Cat-01.png" />
+    <Content Include="Images\Food_Cat-01.png" />
+    <Content Include="Images\Hamburger.png" />
+    <Content Include="Images\List_Icon.png" />
+    <Content Include="Images\Lodging_Cat-01.png" />
     <Content Include="Images\Logo.png" />
     <Content Include="Images\filterikon.png" />
     <Content Include="Images\FoodPurchaseOffered.png" />
     <Content Include="Images\kartaikon.png" />
     <Content Include="Images\listikon.png" />
+    <Content Include="Images\Logo1.png" />
+    <Content Include="Images\MagnifyingGlass_Icon.png" />
+    <Content Include="Images\Map_Icon.png" />
+    <Content Include="Images\Misc_Cat-01.png" />
+    <Content Include="Images\My_Position_Icon.png" />
+    <Content Include="Images\Pins\Bar.png" />
+    <Content Include="Images\Pins\Blue.png" />
+    <Content Include="Images\Pins\BlueMiscService.png" />
+    <Content Include="Images\Pins\Buy.png" />
+    <Content Include="Images\Pins\Cafe.png" />
+    <Content Include="Images\Pins\FastFood.png" />
+    <Content Include="Images\Pins\Flower.png" />
+    <Content Include="Images\Pins\Food.png" />
+    <Content Include="Images\Pins\Gray.png" />
+    <Content Include="Images\Pins\Lodging.png" />
+    <Content Include="Images\Pins\Misc.png" />
+    <Content Include="Images\Pins\Orange.png" />
+    <Content Include="Images\Pins\OrangeFoodBuy.png" />
+    <Content Include="Images\Pins\OrangeVehicleService.png" />
+    <Content Include="Images\Pins\Rent.png" />
+    <Content Include="Images\Pins\Service.png" />
+    <Content Include="Images\Pins\Sports.png" />
+    <Content Include="Images\Pins\Technology.png" />
+    <Content Include="Images\Pins\Vehicle.png" />
+    <Content Include="Images\Sports_Cat-01.png" />
+    <Content Include="Images\Technology_Cat-01.png" />
     <Content Include="Images\tidsikon.png" />
+    <Content Include="Images\Time_Icon.png" />
+    <Content Include="Images\Vehicles_Cat-01.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\Thumbs.db" />
+    <None Include="Properties\PublishProfiles\44tim44 FTP.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -189,7 +231,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\spider.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
